--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -18,3 +18,4 @@ CONFIG_ZMK_BACKLIGHT_AUTO_OFF_USB=n
 
 # disable "Underglow toggling also controls external power" so that OLED can still run with RGB off
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
