--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -19,6 +19,10 @@ CONFIG_ZMK_BACKLIGHT_AUTO_OFF_USB=n
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 
+# Enable mouse emulation
+CONFIG_ZMK_POINTING=y
+CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
+
 # BT
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
