--- a/build.yaml
+++ b/build.yaml
@@ -18,8 +18,8 @@ include:
   - board: nice_nano_v2
     shield: sofle_dongle
   - board: nice_nano_v2
-    shield: sofle_left
+    shield: sofle_left nice_view_adapter nice_view
     cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
   - board: nice_nano_v2
-    shield: sofle_right
+    shield: sofle_right nice_view_adapter nice_view
     cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
