--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -9,6 +9,9 @@ CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
+# Increase idle timeout
+CONFIG_ZMK_IDLE_TIMEOUT=300000 # 5 mins
+
 # Enables RGB functionality (Uncomment lines below to enable.)
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
