--- a/build.yaml
+++ b/build.yaml
@@ -16,6 +16,11 @@ include:
   - board: nice_nano_v2
     shield: settings_reset
   - board: nice_nano_v2
+    shield: sofle_dongle_pro_micro
+    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Sofle_Dongle\"
+  - board: nice_nano_v2
     shield: sofle_left nice_view_adapter nice_view
+    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
   - board: nice_nano_v2
     shield: sofle_right nice_view_adapter nice_view
+    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
