--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -12,11 +12,14 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 # Increase idle timeout (5 mins)
 CONFIG_ZMK_IDLE_TIMEOUT=300000
 
-# Enables RGB functionality (Uncomment lines below to enable.)
+# Enables RGB functionality
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
-
 CONFIG_ZMK_BACKLIGHT_AUTO_OFF_USB=n
+# start color
+CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=343
+CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=203
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=167
 
 # disable "Underglow toggling also controls external power" so that OLED can still run with RGB off
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
