feat: start rgb off
Signed-off-by: JoaoCostaIFG <me@joaocosta.dev>

--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -20,6 +20,8 @@ CONFIG_ZMK_BACKLIGHT_AUTO_OFF_USB=n
 CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=343
 CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=80
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=66
+# start off
+CONFIG_ZMK_RGB_UNDERGLOW_ON_START=n
 
 # disable "Underglow toggling also controls external power" so that OLED can still run with RGB off
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
